--- a/_posts/2016-03-14-qi-gong.markdown
+++ b/_posts/2016-03-14-qi-gong.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Gi Gong"
+title:  "Qi Gong"
 date:   2016-03-14 20:45:00 +0200
 excerpt: "I'd bet that you are thinking of something ancient and exotic."
 ---
